Fixed terminal button visibility

--- a/styles/TerminalButton.module.css
+++ b/styles/TerminalButton.module.css
@@ -1,17 +1,5 @@
 .terminalButton {
-  position: fixed;
-  top: 0;
-  right: 30px;
-  height: 30px;
-  width: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: transparent;
-  border: none;
-  color: #e0e0e0;
-  cursor: pointer;
-  z-index: 99999;
+ display: none;
 }
 
 .terminalButton:hover {
